<resources>
    <string name="app_name">楚禹水务</string>
    <string name="title_home">首页</string>
    <string name="title_notify">通知</string>
    <string name="title_task">任务</string>
    <string name="title_friends">交流</string>
    <string name="live_broadcast">直播</string>
    <string name="title_myself">我的</string>
    <string name="title_password_modify">修改密码</string>
    <string name="title_iphone_number_modify">修改手机号码</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_out">退出</string>
    <string name="error_incorrect_password">账号或密码错误</string>
    <string name="account_field_required">账号不能为空</string>
    <string name="password_field_required">密码不能为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_full_video">FullVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_cluster">点聚合功能--MarkerClusterDemo</string>
    <string name="title_activity_marker_cluster_demo">点聚合功能</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="title_markercluster_desc">\t\t缩小地图，以显示标注物的聚合点 \n
    \t\t放大地图，显示Marker点 \n</string>

    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_name_nav">导航功能</string>
    <string name="action_sign_navi">确定</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>

    <string name="meal_date">日期</string>
    <string name="meal_type">类别</string>
    <string name="meal_fee">金额（元）</string>
    <string name="check_upgrade">检查更新</string>

    <string name="android_auto_update_dialog_title">发现新版本</string>

    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
</resources>
