<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notify"
        android:icon="@drawable/notice"
        android:title="@string/title_notify" />
    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/task"
        android:title="@string/title_task" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/contact"
        android:title="@string/title_friends" />
    <item
        android:id="@+id/navigation_myself"
        android:icon="@drawable/my"
        android:title="@string/title_myself" />

</menu>
